minor changes to announcement_list css; fixed announcement border alignment with rest of page

--- a/main/static/main/css/announcement_list.css
+++ b/main/static/main/css/announcement_list.css
@@ -1,27 +1,16 @@
-.category {
+/*.category {
     width:20px;
     height:50px;
-}
-.announcement-content {
-    padding-top: 10px;
-}
-.announcement-author {
-    float: right;
-    padding-top: 0px;
-}
-.announcement-date {
-}
+}*/
+
 .announcement-wrapper {
     /*background-color: #f5f5f5;*/
     border: 20px solid #f5f5f5;
-    padding: 0px 0px;
+    padding: 16px 0px;
     margin-right: 20px;
     margin-bottom: 20px;
 }
-.announcement-container {
-    padding: 16px 0px;
-    padding-right: 32px;
-}
+
 .announcement-wrapper .edit {
     display:none;
 }
